--- a/sale-fe/src/index.html
+++ b/sale-fe/src/index.html
@@ -1,22 +1,13 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>EShop</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script src="https://kit.fontawesome.com/147a42bf9e.js" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <title>SaleFe</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
-    <app-root>
-        <div class="preloading">
-            <i class="fa fa-spinner fa-spin fa-5x" aria-hidden="true"></i>
-        </div>
-    </app-root>
-    <script src="https://js.stripe.com/v3/"></script>
+  <app-root></app-root>
 </body>
-
 </html>
